// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeInput Display tests should display correctly 1`] = `
<div>
  <div
    class="component"
  >
    <div
      aria-label="Введено 0 из 4 символов"
      aria-live="polite"
      class=""
    >
      <input
        autocomplete="one-time-code"
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`CodeInput Display tests should display correctly with error 1`] = `
<div>
  <div
    class="component"
  >
    <div
      aria-label="Введено 0 из 4 символов"
      aria-live="polite"
      class="shake"
    >
      <input
        autocomplete="one-time-code"
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
    <div
      class="error"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
